--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
                 <input type="text" name="nome" id="iname" placeholder="Nome Completo" required size="30">
             </p>
             <p>
+                <label for="sexo">Sexo</label ><br>
+                <input type="radio" name="sexo" id="idmasc" required><label for="idmasc">Masculino</label>
+                <input type="radio" name="sexo" id="idfem"><label for="idfem">Feminino</label>
+            </p>
+            <p>
+                Qual seu tipo de musica? <br>
+                <input type="checkbox" name="forro" id="idfor"><label for="idfor">forro</label><br>
+                <input type="checkbox" name="phonk" id="idphonk"><label for="idphonk">phonk </label><br>
+                <input type="checkbox" name="rock" id="idrock"><label for="idrock">Rock</label>
+            </p>
+            <p>
                 <label for="igmail">Gmail:</label><br>
                 <input type="email" name="email" id="email" placeholder="Usuario@gmail.com" size="30" required autocomplete="email">
             </p>
