--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
                 <input type="radio" name="sexo" id="idfem"><label for="idfem">Feminino</label>
             </p>
             <p>
+                <label for="idadade">Ano de nascensa:</label>
+                <input type="number" name="ida" id="idade" max="1900" max="2020" required oninput="iida()">
+            </p>
+            <p>
+                <output id="resultado">0</output>
+            </p>
+            <p>
                 Qual seu tipo de musica? <br>
                 <input type="checkbox" name="forro" id="idfor"><label for="idfor">forro</label><br>
                 <input type="checkbox" name="phonk" id="idphonk"><label for="idphonk">phonk </label><br>
