--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <h1>Preencha o formulario</h1>
     <div id="informacoes">
-        <form action="flex.box.html" autocomplete="on" method="get" id="formulario">
+        <form action="" autocomplete="on" method="get" id="formulario">
             <p>
                 <label for="iname">Nome:</label><br>
                 <input type="text" name="nome" id="iname" placeholder="Nome Completo" required size="30">
@@ -44,12 +44,11 @@
             </p>
             <p>
                 <output id="resultado">0</output>
-            </p>
             <p>
                 Qual seu tipo de musica? <br>
-                <input type="checkbox" name="forro" id="idfor"><label for="idfor">forro</label><br>
-                <input type="checkbox" name="phonk" id="idphonk"><label for="idphonk">phonk </label><br>
-                <input type="checkbox" name="rock" id="idrock"><label for="idrock">Rock</label>
+                <input type="radio" name="musicas" id="idfor"><label for="idfor">forro</label><br>
+                <input type="radio" name="musicas" id="idphonk"><label for="idphonk">phonk </label><br>
+                <input type="radio" name="musicas" id="idrock"><label for="idrock">Rock</label>
             </p>
             <p>
                 <label for="igmail">Gmail:</label><br>
