--- a/forro.html
+++ b/forro.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <h1>Forro & Sertanejo</h1>
-    <div id="quadro">
-        <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/0YtX3p_9QnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-        <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/Pr8yfjZRApc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-        <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/HTll8kVYPyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-        <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/FQhHKtFrYOM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-        <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/UVIunE8U5sQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-        <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/xFjGUCU4Elk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-        <div class="item">7</div>
-        <div class="item">8</div>   
-    </div>
+    <article>
+        <div id="quadro">
+            <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/0YtX3p_9QnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/Pr8yfjZRApc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/HTll8kVYPyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/FQhHKtFrYOM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/UVIunE8U5sQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/xFjGUCU4Elk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/xOZmd7dOgc0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/x97ZBC0jBxo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+        </div>
+    </article>
 </body>
 </html>
