--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <output id="resultado">0</output>
             <p>
                 Qual seu tipo de musica? <br>
-                <input type="radio" name="musicas" id="idfor" value="musica1"><label for="idfor">forro</label><br>
-                <input type="radio" name="musicas" id="idphonk" value="musica2"><label for="idphonk">phonk </label><br>
-                <input type="radio" name="musicas" id="idrock" value="musica3"><label for="idrock">Rock</label>
+                <input type="radio" name="musicas" id="idfor" value="1"><label for="idfor">forro</label><br>
+                <input type="radio" name="musicas" id="idphonk" value="2"><label for="idphonk">phonk </label><br>
+                <input type="radio" name="musicas" id="idrock" value="3"><label for="idrock">Aleatorias</label>
             </p>
             <p>
                 <label for="igmail">Gmail:</label><br>
@@ -64,7 +64,7 @@
             </p>
         </form>
     </div>
-    <script src="genero.js"></script>
+    <script src="genero.js" defer></script>
     <script >
 function iida(){
         let iano = document.getElementById('iano')
