--- a/aleatorias.html
+++ b/aleatorias.html
@@ -11,14 +11,12 @@
     <h1>Musicas Aleatorias</h1>
         <article>
             <div id="container">
-                <div class="itens">1</div>
-                <div class="itens">2</div>
-                <div class="itens">3</div>
-                <div class="itens">4</div>
-                <div class="itens">5</div>
-                <div class="itens">6</div>
-                <div class="itens">7</div>
-                <div class="itens">8</div>
+                <div class="itens"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/WUJvoNDHark?si=DVFKdlFNCOQAP3Yd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                <div class="itens"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/yPm1xALXl2A?si=hZ5Z_y-ABpsya5mS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                <div class="itens"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/0kuhEx22zBc?si=T9gYdnazFeWDPD3K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                <div class="itens"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/foj4jw-PtwM?si=5Sy4hcaUfJqf3dDn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                <div class="itens"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/vgaoiTIBge0?si=Bs4bFJxA6d9lLxM-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                <div class="itens"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/XZ5J1DwLY5M?si=ekqyyLYVhppa6jmu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
             </div>
         </article>
 </body>
