--- a/phonk.html
+++ b/phonk.html
@@ -23,34 +23,26 @@
         <div class="item">11</div>   
     </div>
     -->
-    <article>
+
         <h1>PLAYLIST PHONK</h1>
         <p id="mostre">
             <input type="range" name="fundo" id="ifundo" min="1" max="3" value="0" oninput="numero()">
             <label for="vamos">numero da imagem:</label>
             <output id="vamos">0</output>
         </p>
+    <article>
         <section id="container">
-            <div class="video"><iframe width="97%" height="315" src="https://www.youtube.com/embed/LbJQnT0rbCI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/LbJQnT0rbCI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
-            <div class="video"><iframe width="97%" height="315" src="https://www.youtube.com/embed/3T9esuypiSs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/3T9esuypiSs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
-            <div class="video"><iframe width="97%" height="315" src="https://www.youtube.com/embed/an-oFT6mkPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/an-oFT6mkPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
-            <div class="video"><iframe width="97%" height="315" src="https://www.youtube.com/embed/pyH46f6tG2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/pyH46f6tG2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
-            <div class="video"><iframe width="97%" height="315" src="https://www.youtube.com/embed/-GdrxOghmSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-            <div class="video"><iframe width="97%" height="315" src="https://www.youtube.com/embed/MgHUWAatM-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/-GdrxOghmSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+            <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/MgHUWAatM-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
         </section>
-        <!--<h2>teste</h2>
-        <section id="imagens">
-
-            <div class="fotos"><img src="imagens/shogun-cll.png" alt="shogun-cll"></div>
-            <div class="textos">
-                <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quis reiciendis excepturi culpa sed, deserunt, autem consequatur eveniet iure necessitatibus suscipit. In placeat nostrum, reprehenderit excepturi amet repudiandae eius perspiciatis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, ipsa nam labore libero placeat officiis odit iusto maxime perferendis! Soluta itaque perferendis distinctio, repellendus qui eveniet harum est libero quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ipsam quis quaerat velit iure cupiditate sit. Officiis deserunt nihil amet nesciunt neque reprehenderit facere labore voluptatibus illum! Illo, asperiores enim! Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque id modi nulla nam repudiandae dolore praesentium eum saepe qui necessitatibus amet, corporis iste autem reprehenderit. Reprehenderit in dolorum illum laborum?</p>
-            </div>
-
-        </section>-->
     </article>
     <script src="script.js"></script>
 </body>
