--- a/forro.html
+++ b/forro.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/forro.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Forro & Sertanejo</title>
 </head>
 <body>
-    <h1>Forro & Sertanejo</h1>
+
+    <header>
+        <h1>Forro & Sertanejo</h1>
+
+        <div id="paginamenu">
+            <button><i  class="fa-solid fa-bars menu"></i></button>
+            <div id="outrostipos">
+                <h2>OUTROS GENEROS MÚSICAIS</h2>
+                <ul>
+                    <li><a href="">a</a></li>
+                    <li><a href="">s</a></li>
+                    <li><a href="">as</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
     <article>
         <div id="quadro">
             <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/0YtX3p_9QnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
