--- a/forro.html
+++ b/forro.html
@@ -9,22 +9,25 @@
     <title>Forro & Sertanejo</title>
 </head>
 <body>
-
     <header>
         <h1>Forro & Sertanejo</h1>
 
-        <div id="paginamenu">
-            <button><i  class="fa-solid fa-bars menu"></i></button>
+        <section id="paginamenu">
+        <span id="menudogenero"><i  class="fa-solid fa-bars menu"></i></span>
             <div id="outrostipos">
                 <h2>OUTROS GENEROS MÚSICAIS</h2>
-                <ul>
-                    <li><a href="">a</a></li>
-                    <li><a href="">s</a></li>
-                    <li><a href="">as</a></li>
-                </ul>
+                <i class="fa-solid fa-circle-xmark fa-lg sair"></i>
+                <div id="musicas">
+                    <ul>
+                        <li><a href="phonk.html">Phonk</a></li>
+                        <li><a href="aleatorias.html">aleatorias</a></li>
+                    </ul>
+                </div>
+                <a href="index.html"><i class="fa-solid fa-house fa-xl" style="color: #450557;"></i></a>
             </div>
-        </div>
+        </section>
     </header>
+
     <article>
         <div id="quadro">
             <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/0YtX3p_9QnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
@@ -37,5 +40,6 @@
             <div class="item"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/x97ZBC0jBxo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
         </div>
     </article>
+    <script src="menu.js"></script>
 </body>
 </html>
