--- a/aleatorias.html
+++ b/aleatorias.html
@@ -5,10 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/aleatorias.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
     <h1>Musicas Aleatorias</h1>
+    <span id="menudogenero"><i class="fa-solid fa-bars menu"></i></span>
+    <menu>
+        <div id="outrostipos">
+            <h2>OUTROS GENEROS MÚSICAIS</h2>
+            <p><i class="fa-solid fa-circle-xmark fa-lg sair" id="sair"></i></p>
+            <div id="musicas">
+                    <a href="phonk.html">
+                        <p class="abasmus" id="phonk">Phonk</p>
+                    </a>
+                    <a href="forro.html">
+                        <p class="abasmus" id="forro">Forro</p>
+                    </a>
+            </div>
+            <a href="index.html" id="home"><i class="fa-solid fa-house fa-xl" style="color: black;"></i></a>
+    </menu>
         <article>
             <div id="container">
                 <div class="itens"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/WUJvoNDHark?si=DVFKdlFNCOQAP3Yd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
@@ -19,5 +37,6 @@
                 <div class="itens"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/XZ5J1DwLY5M?si=ekqyyLYVhppa6jmu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
             </div>
         </article>
+        <script src="menu.js"></script>
 </body>
 </html>
