--- a/phonk.html
+++ b/phonk.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="estilos/style.css">
     <title>FlexBox</title>
 </head>
@@ -23,7 +26,21 @@
         <div class="item">11</div>   
     </div>
     -->
-
+    <span id="menudogenero"><i class="fa-solid fa-bars menu"></i></span>
+        <menu>
+            <div id="outrostipos">
+                <h2>OUTROS GENEROS MÚSICAIS</h2>
+                <p><i class="fa-solid fa-circle-xmark fa-lg sair" id="sair"></i></p>
+                <div id="musicas">
+                        <a href="aleatorias.html">
+                            <p class="abasmus" id="aleatorias">Aleatorias</p>
+                        </a>
+                        <a href="forro.html">
+                            <p class="abasmus" id="forro">Forro</p>
+                        </a>
+                </div>
+                <a href="index.html" id="home"><i class="fa-solid fa-house fa-xl" style="color: black;"></i></a>
+        </menu>
         <h1>PLAYLIST PHONK</h1>
         <p id="mostre">
             <input type="range" name="fundo" id="ifundo" min="1" max="3" value="0" oninput="numero()">
